# GenomeSim

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
docs/developers/: architecture.md  core-concepts.md
examples/: README.md  basic_types.py
genomesim/: __init__.py  py.typed
genomesim/core/: __init__.py  interfaces.py  types.py
tests/: __init__.py  conftest.py  test_interfaces.py  test_types.py
